<resources>
    <string name="app_name">The Movie DB App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="first_name">First Name</string>

    <string name="re_password">Re-Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="dont_have_account_signup">Dont Have Account ? <u>SignUp</u></string>
    <string name="save">Save Data</string>
    <string name="tittless">Tittle: </string>
    <string name="genre">\Genre: \</string>
    <string name="or"> / </string>
    <string name="release">\Release Date: \</string>
    <string name="tagline">\Tagline: \</string>
    <string name="status">\Status: \</string>
    <string name="Desc">Description: </string>
    <string name="todo">TODO</string>
    <string name="judul_movie">Judul Movie</string>
    <string name="genres">Genre</string>
    <string name="release_date">Release Date</string>
    <string name="statuss">Status</string>
    <string name="taglines">Tagline</string>
    <string name="deskripsi_movie">Deskripsi Movie</string>
    <string name="the_movie_db">The Movie DB</string>
    <string name="welcome">\Welcome : \</string>
    <string name="firstname">Firstname</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="change_profile">Change Profile</string>
    <string name="logout">Logout</string>
    <string name="success_load">Success Load Detail</string>
</resources>