<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ajgroup.priceacsimulation.login.LoginFragment"
    >
    <data>
        <variable
            name="myLoginViewModel"
            type="com.ajgroup.themoviedbapp.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#032541"
        >
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="80dp"
            android:text="@string/login"
            android:textColor="#ffff"
            android:fontFamily="@font/matcha"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/et_email"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_textfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:text="@={myLoginViewModel.inputUsername}"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/et_password"
            style="@style/Widget.Material3.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            app:passwordToggleEnabled="true"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@={myLoginViewModel.inputPassword}"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            style="@style/Widget.AppCompat.Button"
            android:id="@+id/submitButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{()->myLoginViewModel.loginButton()}"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/SignUpButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:text="@string/dont_have_account_signup"
            android:textSize="20sp"
            android:textColor="#ffff"
            android:fontFamily="@font/matcha"
            android:textStyle="bold"
            android:onClick="@{()->myLoginViewModel.signUP()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/submitButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>